--- a/Lb5/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
+++ b/Lb5/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class.cs" />
+    <Compile Include="QuestionPartial.cs" />
     <Compile Include="interfacescs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
